better directory structure

--- a/.gitignore
+++ b/.gitignore
@@ -146,3 +146,4 @@ mnist_digits/models/minst1.model/saved_model.pb
 mnist_digits/models/minst1.model/variables/variables.data-00000-of-00001
 mnist_digits/models/minst1.model/variables/variables.index
 mnist_digits/data/mnist.pkl
+image_processing/mnist_digits/data/mnist.pkl
