--- a/.gitignore
+++ b/.gitignore
@@ -179,3 +179,4 @@ machine_learning/supervised/classification/image_processing/mnist_digits/saved_m
 machine_learning/supervised/classification/image_processing/mnist_fashion/saved_models/keras_clothes.model/saved_model.pb
 machine_learning/supervised/classification/image_processing/mnist_fashion/saved_models/keras_clothes.model/variables/variables.data-00000-of-00001
 machine_learning/supervised/classification/image_processing/mnist_fashion/saved_models/keras_clothes.model/variables/variables.index
+*.csv
